@@ -25,6 +25,7 @@
 - Added heading property for tk::ComboGroup widget.
 - Fixed missing builtin styles for tk::ComboGroup widget.
 - Added spin_spacing property to tk::ComboGroup widget.
+- Added 'balance_color', 'balance_color_custom', 'flat' and 'scale_marks' properties to the tk::Knob widget.
 
 TODO:
 - Add custom mouse pointer for fraction actions.
